--- a/web/module/transaction/transaction-user.html
+++ b/web/module/transaction/transaction-user.html
@@ -11,7 +11,7 @@
 <body>
     <div class="sidebar">
         <div class="jti">
-            <img src="assets/logo-jti.png">
+            <img src="/web/assets/logo-jti.png">
             <div class="title">JTI Polinema</div> 
         </div>
         <ul>
@@ -91,28 +91,36 @@
                         </svg>
                         <input type="text" name="search" class="searchbox" placeholder="Search">
                     </div>
-                    <div class="filter">
-                        <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
-                        <label for="today" class="filter-label">Today</label>
-                        <input type="radio" name="date-filter" id="week" class="filter-option">
-                        <label for="week" class="filter-label">Week</label>
-                        <input type="radio" name="date-filter" id="month" class="filter-option">
-                        <label for="month" class="filter-label">Month</label>
+                    <div class="control">
+                        <div class="filter">
+                            <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
+                            <label for="today" class="filter-label">Today</label>
+                            <input type="radio" name="date-filter" id="week" class="filter-option">
+                            <label for="week" class="filter-label">Week</label>
+                            <input type="radio" name="date-filter" id="month" class="filter-option">
+                            <label for="month" class="filter-label">Month</label>
+                        </div>
+
+                        <div class="btn-add">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 10H15" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M10 15V5" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <a href="#">Add Transaction</a>
+                        </div>
                     </div>
                 </form>
-
                 <table class="transaction-data">
                     <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Product</th>
-                            <th>Time</th>
-                            <th>Date</th>
-                            <th>Total Price</th>
-                            <th></th>
-                        </tr>
+                    <tr>
+                        <th>Order ID</th>
+                        <th>Product</th>
+                        <th>Time</th>
+                        <th>Date</th>
+                        <th>Total Price</th>
+                        <th></th>
+                    </tr>
                     </thead>
-
                     <tbody>
                         <tr>
                             <td>#00001234</td>
@@ -201,7 +209,95 @@
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
                             <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
-                         </tr>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                        </tr>
                         <tr>
                             <td>#00001234</td>
                             <td>Royal Height</td>
@@ -231,64 +327,5 @@
             </div>
         </div>
     </div>
-
-    <div id="modal" class="modal-transaction">
-        <div class="modal-container">
-            <div class="modal-header">
-                Detail Transaction
-            </div>
-
-            <table class="stamp">
-                <tr>
-                    <td>Order ID</td>
-                    <td>#00001234</td>
-                </tr>
-                <tr>
-                    <td>Time</td>
-                    <td>#00001234</td>
-                </tr>
-                <tr>
-                    <td>Date</td>
-                    <td>#00001234</td>
-                </tr>
-            </table>
-
-            <table class="purchased">
-                <thead>
-                    <tr>
-                        <th>Product</th>
-                        <th><span>4</span> items</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Teh Pucuk Harum</td>
-                        <td>IDR <span>3.500,00</span></td>
-                    </tr>
-                    <tr>
-                        <td>Teh Pucuk Harum</td>
-                        <td>IDR <span>3.500,00</span></td>
-                    </tr>
-                    <tr>
-                        <td>Teh Pucuk Harum</td>
-                        <td>IDR <span>3.500,00</span></td>
-                    </tr>
-                    <tr>
-                        <td>Teh Pucuk Harum</td>
-                        <td>IDR <span>3.500,00</span></td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <div class="total-price">
-                <p>Total Price</p>
-                <p>IDR <span>10.000,00</span></p>
-            </div>
-
-            <button id="close-modal" class="modal-button" onclick="closeModal()">Close</button>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
