update transaction page

--- a/web/slicing-transaction.html
+++ b/web/slicing-transaction.html
@@ -76,7 +76,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -84,7 +84,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -92,7 +92,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -100,7 +100,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -108,7 +108,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -116,7 +116,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -124,7 +124,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -132,7 +132,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -140,7 +140,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -148,7 +148,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -156,7 +156,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -164,7 +164,111 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><a href="#"><div class="seedetail">See Detail</div></a></td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                        </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
                         </tr>
                     </tbody>
                 </table>
