--- a/web/transaction-admin.html
+++ b/web/transaction-admin.html
@@ -91,36 +91,28 @@
                         </svg>
                         <input type="text" name="search" class="searchbox" placeholder="Search">
                     </div>
-                    <div class="control">
-                        <div class="filter">
-                            <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
-                            <label for="today" class="filter-label">Today</label>
-                            <input type="radio" name="date-filter" id="week" class="filter-option">
-                            <label for="week" class="filter-label">Week</label>
-                            <input type="radio" name="date-filter" id="month" class="filter-option">
-                            <label for="month" class="filter-label">Month</label>
-                        </div>
-
-                        <div class="btn-add">
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M5 10H15" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M10 15V5" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <a href="#">Add Transaction</a>
-                        </div>
+                    <div class="filter">
+                        <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
+                        <label for="today" class="filter-label">Today</label>
+                        <input type="radio" name="date-filter" id="week" class="filter-option">
+                        <label for="week" class="filter-label">Week</label>
+                        <input type="radio" name="date-filter" id="month" class="filter-option">
+                        <label for="month" class="filter-label">Month</label>
                     </div>
                 </form>
-                <table>
+
+                <table class="transaction-data">
                     <thead>
-                    <tr>
-                        <th>Order ID</th>
-                        <th>Product</th>
-                        <th>Time</th>
-                        <th>Date</th>
-                        <th>Total Price</th>
-                        <th></th>
-                    </tr>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Product</th>
+                            <th>Time</th>
+                            <th>Date</th>
+                            <th>Total Price</th>
+                            <th></th>
+                        </tr>
                     </thead>
+
                     <tbody>
                         <tr>
                             <td>#00001234</td>
@@ -128,7 +120,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -136,7 +128,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -144,7 +136,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -152,7 +144,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -160,7 +152,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -168,7 +160,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -176,7 +168,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -184,7 +176,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -192,7 +184,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -200,7 +192,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -208,7 +200,15 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                         </tr>
+                        <tr>
+                            <td>#00001234</td>
+                            <td>Royal Height</td>
+                            <td>04-10-2023</td>
+                            <td>04-10-2023</td>
+                            <td>IDR 50.000,00</td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -216,7 +216,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -224,108 +224,71 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
-                        </tr>
-                        <tr>
-                            <td>#00001234</td>
-                            <td>Royal Height</td>
-                            <td>04-10-2023</td>
-                            <td>04-10-2023</td>
-                            <td>IDR 50.000,00</td>
-                            <td><div class="seedetail"><a href="#">See Detail</a></div></td>
+                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
+
+    <div id="modal" class="modal-transaction">
+        <div class="modal-container">
+            <div class="modal-header">
+                Detail Transaction
+            </div>
+
+            <table class="stamp">
+                <tr>
+                    <td>Order ID</td>
+                    <td>#00001234</td>
+                </tr>
+                <tr>
+                    <td>Time</td>
+                    <td>#00001234</td>
+                </tr>
+                <tr>
+                    <td>Date</td>
+                    <td>#00001234</td>
+                </tr>
+            </table>
+
+            <table class="purchased">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th><span>4</span> items</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Teh Pucuk Harum</td>
+                        <td>IDR <span>3.500,00</span></td>
+                    </tr>
+                    <tr>
+                        <td>Teh Pucuk Harum</td>
+                        <td>IDR <span>3.500,00</span></td>
+                    </tr>
+                    <tr>
+                        <td>Teh Pucuk Harum</td>
+                        <td>IDR <span>3.500,00</span></td>
+                    </tr>
+                    <tr>
+                        <td>Teh Pucuk Harum</td>
+                        <td>IDR <span>3.500,00</span></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="total-price">
+                <p>Total Price</p>
+                <p>IDR <span>10.000,00</span></p>
+            </div>
+
+            <button id="close-modal" class="modal-button" onclick="closeModal()">Close</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
