--- a/web/transaction-user.html
+++ b/web/transaction-user.html
@@ -91,16 +91,26 @@
                         </svg>
                         <input type="text" name="search" class="searchbox" placeholder="Search">
                     </div>
-                    <div class="filter">
-                        <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
-                        <label for="today" class="filter-label">Today</label>
-                        <input type="radio" name="date-filter" id="week" class="filter-option">
-                        <label for="week" class="filter-label">Week</label>
-                        <input type="radio" name="date-filter" id="month" class="filter-option">
-                        <label for="month" class="filter-label">Month</label>
+                    <div class="control">
+                        <div class="filter">
+                            <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
+                            <label for="today" class="filter-label">Today</label>
+                            <input type="radio" name="date-filter" id="week" class="filter-option">
+                            <label for="week" class="filter-label">Week</label>
+                            <input type="radio" name="date-filter" id="month" class="filter-option">
+                            <label for="month" class="filter-label">Month</label>
+                        </div>
+
+                        <div class="btn-add">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 10H15" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M10 15V5" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <a href="#">Add Transaction</a>
+                        </div>
                     </div>
                 </form>
-                <table>
+                <table class="transaction-data">
                     <thead>
                     <tr>
                         <th>Order ID</th>
