--- a/web/module/transaction/transaction-admin.html
+++ b/web/module/transaction/transaction-admin.html
@@ -16,7 +16,7 @@
         </div>
         <ul>
             <li>
-                <a href="slicing-dashboard.html">
+                <a href="dashboard.html">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M6.45833 8.125H4.16667C3.24583 8.125 2.5 7.37917 2.5 6.45833V4.16667C2.5 3.24583 3.24583 2.5 4.16667 2.5H6.45833C7.37917 2.5 8.125 3.24583 8.125 4.16667V6.45833C8.125 7.37917 7.37917 8.125 6.45833 8.125Z" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M15.8333 8.125H13.5417C12.6208 8.125 11.875 7.37917 11.875 6.45833V4.16667C11.875 3.24583 12.6208 2.5 13.5417 2.5H15.8333C16.7542 2.5 17.5 3.24583 17.5 4.16667V6.45833C17.5 7.37917 16.7542 8.125 15.8333 8.125Z" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li>
-                <a href="slicing-transaction.html">
+                <a href="transaction-admin.html">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18.3335 4.99996V7.01662C18.3335 8.33329 17.5002 9.16663 16.1835 9.16663H13.3335V3.34162C13.3335 2.41662 14.0918 1.66663 15.0168 1.66663C15.9252 1.67496 16.7585 2.04162 17.3585 2.64162C17.9585 3.24996 18.3335 4.08329 18.3335 4.99996Z" stroke="#1B1B1B" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M1.6665 5.83329V17.5C1.6665 18.1916 2.44984 18.5833 2.99984 18.1666L4.42484 17.1C4.75817 16.85 5.22484 16.8833 5.52484 17.1833L6.90817 18.575C7.23317 18.9 7.7665 18.9 8.0915 18.575L9.4915 17.175C9.78317 16.8833 10.2498 16.85 10.5748 17.1L11.9998 18.1666C12.5498 18.575 13.3332 18.1833 13.3332 17.5V3.33329C13.3332 2.41663 14.0832 1.66663 14.9998 1.66663H5.83317H4.99984C2.49984 1.66663 1.6665 3.15829 1.6665 4.99996V5.83329Z" stroke="#1B1B1B" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
